lustre/osd-ldiskfs/osd_scrub.c
@@ -2549,7 +2549,7 @@ int osd_scrub_start(const struct lu_env *env, struct osd_device *dev,
 	RETURN(rc);
 }
 
-static void osd_scrub_stop(struct osd_device *dev)
+void osd_scrub_stop(struct osd_device *dev)
 {
 	struct lustre_scrub *scrub = &dev->od_scrub.os_scrub;
 
